# hyper-graph-nets

./: .gitignore  LICENSE  README.md  base.sh  conda-environment.yaml  config.yaml  environment.yaml  experiment.sh  first.sh  hyper.sh  job.sh  job7.sh  job_cylinder.sh  job_flag.sh  job_plate.sh  job_plate_cluster.sh  long.sh  main.py  noise.sh  pyproject.toml  requirements.txt  test.py  wandb-metadata.json  wandb-summary.json
artifact/277055578/: wandb_manifest.json
artifact/277055598/: wandb_manifest.json
artifact/277056238/: wandb_manifest.json
artifact/277056253/: wandb_manifest.json
artifact/277056988/: wandb_manifest.json
artifact/277057064/: wandb_manifest.json
artifact/277217448/: wandb_manifest.json
artifact/277217482/: wandb_manifest.json
artifact/315422881/: wandb_manifest.json
artifact/315422907/: wandb_manifest.json
artifact/315422933/: wandb_manifest.json
artifact/315424761/: wandb_manifest.json
artifact/315424786/: wandb_manifest.json
artifact/316078378/: wandb_manifest.json
artifact/316078396/: wandb_manifest.json
artifact/316078436/: wandb_manifest.json
configs/: baseline.yaml  cylinder.yaml  default.yaml  experiment.yaml  first.yaml  flag.yaml  flag7.yaml  hyper.yaml  long.yaml  minimal.yaml  noise.yaml  plate.yaml  plateCluster.yaml  two_moons.yaml
data/: data_loader.py
media/table/: one_step_400_7a85222e13cf6e4e95a1.table.json  (+11 more)
recording/: Recorder.py  get_recorder.py  register_loggers.py
src/: tasks.txt  util.py
tests/: testExample.py
util/: Functions.py  GraphVisualization.py  InitializeConfig.py  Types.py
(+74 files in other folders)
