[tool.poetry]
name = "alrProject"
version = "0.1.0"
description = "A framework for your project at the ALR"
authors = ["Niklas Freymuth <niklas.freymuth@kit.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.1"
torch = "^1.9.0"
wandb = "^0.11.0"
tqdm = "^4.61.2"
sklearn = "^0.0"
plotly = "^5.1.0"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
